--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -816,11 +816,12 @@ h6 {
     text-decoration: none;
 }
 
-.post-card-tags {
+.post-card-primary-tag {
     margin: 0 0 5px 0;
-    font-size: 1.4rem;
     line-height: 1.15em;
-    color: var(--color-secondary);
+    color:  var(--color-primary);
+    font-size: 1.4rem;
+    font-weight: 500;
 }
 
 
@@ -846,13 +847,20 @@ h6 {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 10px 0 0 0;
+    margin: 5px 0 0 0;
     color: var(--color-secondary);
 }
 
 .post-card-footer-left {
+    font-size: 1.35rem;
     display: flex;
     align-items: center;
+}
+
+.post-card-footer-left .bull {
+    display: inline-block;
+    margin: 0 4px;
+    opacity: .6;
 }
 
 .post-card-footer-right {
