--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -598,13 +598,42 @@ h6 {
         font-size: 2.8rem;
     }
 }
+.post-full-header {
+    padding: 0 0 20px;
+}
 
-.content-title {
-    margin: 0 0 0.8em;
+.post-full-tags {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    color: var(--color-secondary);
+    font-size: 1.4rem;
+    line-height: 1.4em;
+    font-weight: 600;
+}
+.post-full-byline {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0 10px;
+    padding-top: 5px;
+    border-top: 1px solid #e3e9ed;
+}
+.post-full-byline-content {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    margin: 2px 0 0;
+    color: var(--color-secondary);
+    font-size: 1.2rem;
+    line-height: 1.2em;
+}
+.post-full-title {
+    margin: 0 0 0.6em;
     font-size: 5rem;
+    font-weight: 600;
 }
 @media (max-width: 500px) {
-    .content-title {
+    .post-full-title {
         margin: 0.8em 0;
         font-size: 3.4rem;
     }
@@ -857,7 +886,7 @@ h6 {
     align-items: center;
 }
 
-.post-card-footer-left .bull {
+ .bull {
     display: inline-block;
     margin: 0 4px;
     opacity: .6;
