--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -767,6 +767,11 @@ h6 {
 .site-nav-icon {
     height: 15px;
     margin: -5px 0 0;
+    border-radius: 0.6rem;
+}
+
+.site-nav-icon:hover {
+    box-shadow: inset 0 0 0 10em rgba(255, 255, 255, 0.4);
 }
 
 .site-logo {
